--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,8 +19,8 @@
       height: auto;
     }
     .logo {
-      width: 360px;
-      margin-bottom: 1.5rem;
+      width: 140px;
+      margin-bottom: 1rem;
     }
     .emblem {
       width: 100%;
@@ -73,34 +72,15 @@
       margin-bottom: 1.5rem;
       color: #ccc;
     }
-    .subscription input[type="email"] {
-      padding: 1rem;
-      width: 100%;
-      max-width: 400px;
-      font-size: 1rem;
-      margin-bottom: 1rem;
-      border: 2px solid #00f0ff;
-      border-radius: 6px;
-      background-color: #0a0a0a;
-      color: #f2f2f2;
-      box-shadow: 0 0 8px #00f0ff66;
-    }
-    .subscription input[type="email"]::placeholder {
-      color: #888;
-    }
-    .subscription button {
+    .subscription a {
+      display: inline-block;
       padding: 1rem 2rem;
       font-size: 1.1rem;
-      border: none;
       border-radius: 6px;
-      background: linear-gradient(45deg, #00f0ff, #ff006e);
+      background-color: #00f0ff;
       color: #000;
       font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .subscription button:hover {
-      background: linear-gradient(45deg, #ff006e, #00f0ff);
+      text-decoration: none;
     }
     .explanation {
       margin-top: 3rem;
@@ -111,8 +91,6 @@
       font-size: 1rem;
       color: #ccc;
       line-height: 1.6;
-      margin-left: auto;
-      margin-right: auto;
     }
     .footer {
       font-size: 0.9rem;
@@ -126,7 +104,7 @@
   <h1>Code::Adamantium</h1>
   <h2>The Gate is Open</h2>
 
-  <video autoplay loop muted class="emblem">
+  <video autoplay loop muted playsinline class="emblem" poster="bsklogo.png">
     <source src="codelogo.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
@@ -137,11 +115,8 @@
 
   <div class="subscription">
     <h3>Join the Resistance</h3>
-    <p>Enter your Beat Saber-linked email to receive the next encrypted transmission.</p>
-    <form action="https://docs.google.com/forms/d/e/1FAIpQLSfOSaDZGwZr_6-xGvFSMWu07pdkrpwOmxT79j2lYVzOhRL1kw/formResponse" method="POST" target="_blank">
-      <input type="email" name="entry.440538335" placeholder="Enter your email address" required>
-      <button type="submit">Subscribe</button>
-    </form>
+    <p>Click below to subscribe via our encrypted Google Form:</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOSaDZGwZr_6-xGvFSMWu07pdkrpwOmxT79j2lYVzOhRL1kw/viewform" target="_blank">Subscribe Now</a>
   </div>
 
   <div class="explanation">
